      This is still needed due to #518919.  Don't require update-menus in
      postrm for regular menu files, only for menu-methods, but also don't
      warn if it's present.
  * checks/scripts:
    + [RA] Policy allows scripts to assume that /bin/sh supports local
      with simple variable assignments.

  * lib/Dep.pm:
    + [RA] Remove, replaced with Lintian::Relation.

 -- Russ Allbery <rra@debian.org>  Mon, 09 Mar 2009 20:31:24 -0700

lintian (2.2.7) unstable; urgency=low

  The "debhelper 7.2.3 and lots of fiddly infrastructure fixes" release.

  * Summary of tag changes:
    + Added
      - apparently-truncated-elf-binary
      - copyright-refers-to-nonexistent-license-file
      - debian-control-has-unusual-field-spacing (pedantic)
      - diversion-for-unknown-file
      - embedded-zlib
      - gz-file-not-gzip
      - incorrect-libdir-in-la-file
      - orphaned-diversion
      - package-uses-local-diversion
      - remove-of-unknown-diversion
    + Removed
      - description-synopsis-has-leading-spaces
      - postinst-does-not-call-installdocs
      - prerm-does-not-call-installdocs

  * checks/binaries{,.desc}:
    + [RA] Check for embedded copies of zlib in ELF binaries by looking
      for the inflate and deflate copyright strings.  Patch from Raphael
      Geissert.  (Closes: #318104)
    + [RA] Avoid capturing parentheses in regexes due to their minor
      performance penalty.  Patch from Raphael Geissert.
    + [RA] Report apparently truncated ELF binaries separately from
      apparently corrupted ones.  The current binutils now distinguishes.
      Patch from Raphael Geissert.  (Closes: #517778)
    + [RA] Allow i386 binaries in amd64 packages for right now.  Thanks,
      Paul Wise.  (Closes: #516856)
    + [RA] Suggest, when fixing spelling errors in binaries, that one
      unfuzzy gettext translations as well.  Thanks, Raphael Geissert.
  * checks/changelog-file:
    + [RA] Avoid capturing parentheses in regexes due to their minor