@@ -271,6 +271,31 @@ for my $test (@tests) {
     $tests_run++;
 }
 
+# --- Run all test scripts
+
+$prev = $prev || scalar(@tests);
+@tests = ();
+if ($singletest) {
+    my $script = "$TESTSET/scripts/$singletest.t";
+    if (-f $script) {
+	@tests = ($script);
+    }
+} else {
+    unless (-d "$TESTSET/scripts") {
+	fail("cannot find $TESTSET/scripts: $!");
+    }
+    @tests = ("$TESTSET/scripts");
+}
+print "\n" if ($prev and @tests);
+if (@tests) {
+    print "Test scripts:\n";
+    if (system('prove', '-I', "$LINTIAN_ROOT/lib", @tests) != 0) {
+	exit 1 unless $run_all_tests;
+	$status = 1;
+    }
+    $tests_run++;
+}
+
 # --- Check whether we ran any tests
 
 if (!$tests_run) {
